--- a/Resources/Private/Backend/Templates/Administration/Index.html
+++ b/Resources/Private/Backend/Templates/Administration/Index.html
@@ -94,7 +94,7 @@
 											</f:for>
 										</tr>
 									</thead>
-									<f:render partial="FeUsersList" arguments="{feUsers: paginatedFeUsers, pagination: pagination, mailerActive: mailerActive, replacements: replacements, fields: fields, fieldsSeparator: fieldsSeparator, conf: conf}" />								
+									<f:render partial="FeUsersList" arguments="{feUsers: paginatedFeUsers, pagination: pagination, mailerActive: mailerActive, replacements: replacements, fields: fields, fieldsSeparator: fieldsSeparator, conf: conf, folders:folders, page:page}" />								
 								</table>							
 							</div>
 						</f:be.widget.paginate>
